--- a/templates/blocked_wifi.html
+++ b/templates/blocked_wifi.html
@@ -55,7 +55,7 @@
         </tbody>
     </table>
     <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/" class="btn btn-primary">Go to Main Page</a>
+	<a href="/" class="btn btn-sm btn-primary">Go to Main Page</a>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
