--- a/templates/connect.html
+++ b/templates/connect.html
@@ -42,6 +42,11 @@
 	   border-radius: 60px;
 	   margin-bottom: 20px;
   	}
+	 .btn:hover {
+         color: #fff;
+	 background-color: #28a745;
+	 border-color: #28a745;
+      }
     </style>
 </head>
 <body>
@@ -64,7 +69,7 @@
     </div>
    </form>
    <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/" class="btn btn-primary">Go to Main Page</a>
+	<a href="/" class="btn btn-sm btn-primary">Go to Main Page</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
