--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -158,7 +158,7 @@
         </div>
     </div>
 </div>
-  <footer class="fixed-bottom text-center bg-light p-2">
+  <footer class="text-center bg-light p-2">
 	<a href="/" class="btn btn-primary">Go to Main Page</a>
     </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
