--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 75vh;
+            min-height: 25vh;
             margin: 0;
-	    font-family: 'Opens Sans',sans-serif;
+	  
         }
 
         form {
@@ -27,8 +27,8 @@
 
         .btn-group {
             display: flex;
-            gap: 20px;
-	    margin: 20px auto 40px;
+            gap: 60px;
+	    margin: 20px auto 20px;
         }
         .top-button {
                 
@@ -36,21 +36,21 @@
 		margin: 0px auto 0px;
             } 
 	.top-margin {
-		margin: 20px auto 20px;
+		margin: 10px auto 10px;
 	    }
 	h1 {
            margin: 0;
        }
 	h3 {
 	color: green;
-	margin-bottom: 40px;
+	margin-bottom: 10px;
 	}
      .header {
 	   color: black;
-	   padding: 10px;
+	   padding: 0px;
 	   text-align: center;
-	   border-radius: 30px;
-	   margin-bottom: 20px;
+	   border-radius: 0px;
+	   margin-bottom: 0px;
   	}
        a {
            text-decoration: none;
@@ -65,7 +65,7 @@
 	  padding: 30px auto 300px
       }
       .heading-2{
-	 margin: 60px auto 30px;
+	 margin: 10px auto 20px;
      }
      
      .btn-1{
@@ -74,21 +74,24 @@
       .btn-2{
 	 background-color:  #ffb6c1;
       }
-      
+      footer{
+	  margin: 0;
+	  padding: 0;
+      }
      
     </style>
 </head>
 <body>
   <div class="header">
     <h1>Welcome to Wi-Fi Analyzer Page</h1>
-    <P>A webpage for analysing Wi-Fi signals.</p>
+    <p>A webpage for analysing Wi-Fi signals.</p>
   </div>
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
     <div class="top-button">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block top-margin">Scan Available Wi-Fi</a>
-        <a href="/plot" class="btn btn-info btn-lg btn-block top-margin">Available Wi-Fi Bar-Graph</a>
+	<a href="/scan_wifi" class="btn btn-primary btn-md btn-block top-margin">Scan Available Wi-Fi</a>
+        <a href="/plot" class="btn btn-info btn-md btn-block top-margin">Available Wi-Fi Bar-Graph</a>
       </div>   
   
    <form method="post">
@@ -107,13 +110,13 @@
     
 
 
-        <a href="/blocked_wifi" class="btn btn-dark btn-lg btn-block ">Blocked Wi-Fi List</a>
-	<a href="/reset" class="btn btn-danger btn-lg btn-block ">Remove All Blocked Wi-Fi</a>
-        <a href="/connect" class="btn btn-1 btn-lg btn-block ">Connect to a Wi-Fi</a>
-	<a href="/ping" class="btn btn-2 btn-lg btn-block ">Ping to a Host</a>
-	<a href="/speed_test" class="btn btn-primary btn-lg btn-block ">Intenet Speed Test</a>
+        <a href="/blocked_wifi" class="btn btn-dark btn-md btn-block ">Blocked Wi-Fi List</a>
+	<a href="/reset" class="btn btn-danger btn-md btn-block ">Remove All Blocked Wi-Fi</a>
+        <a href="/connect" class="btn btn-1 btn-md btn-block ">Connect to a Wi-Fi</a>
+	<a href="/ping" class="btn btn-2 btn-md btn-block ">Ping to a Host</a>
+	<a href="/speed_test" class="btn btn-primary btn-md btn-block ">Intenet Speed Test</a>
      <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/documentation" class="btn btn-primary">User Documentation</a>
+	<a href="/documentation" class="btn btn-sm btn-primary">User Documentation</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
