--- a/templates/ping.html
+++ b/templates/ping.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Ping to an IP Address</h1>
+    <h1>Ping to a Host</h1>
    </div>
     {% if message %}
         <h3>{{ message }}</h3>
@@ -66,7 +66,7 @@
     </div>
    </form>
      <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/" class="btn btn-primary">Go to Main Page</a>
+	<a href="/" class="btn btn-sm btn-primary">Go to Main Page</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
