--- a/templates/plot.html
+++ b/templates/plot.html
@@ -42,9 +42,9 @@
          <h1>Wi-Fi Signal Strengths Graph</h1>
          </div>
 
-      <img src="{{ url_for('static', filename='plot.png') }}" alt="wifi signal strengths">
+      <img src="{{ url_for('static', filename='plot.png') }}" alt="wifi signal strengths" width="800" height="500">
       <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/" class="btn btn-primary">Go to Main Page</a>
+	<a href="/" class="btn btn-sm btn-primary">Go to Main Page</a>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
