--- a/templates/scan_wifi.html
+++ b/templates/scan_wifi.html
@@ -60,8 +60,8 @@
             {% endfor %}
         </tbody>
     </table>
-    <footer class="fixed-bottom text-center bg-light p-2">
-	<a href="/" class="btn btn-primary">Go to Main Page</a>
+    <footer class="text-center bg-light p-2">
+	<a href="/" class="btn btn-sm btn-primary">Go to Main Page</a>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
